--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<main>
 		<section>
-			<h2>What is Computer Hardware?</h2>
+			<h2>What is Computer software?</h2>
 			<p>Computer hardware refers to the physical components that make up a computer system. These components include the computer case, motherboard, processor, RAM, hard drive, and other components that are necessary for a computer to function.</p>
 		</section>
 
